--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 .form {
     width: 400px;
     background: #fafafa;
-    margin: 30px auto;
+    margin: 20px auto;
     padding: 30px 20px 40px;
     text-align: center;
     border-radius: var(--radius);
@@ -50,7 +50,7 @@ body {
 }
 
 .form__title {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     font-size: 2rem;
 
 }
@@ -61,4 +61,22 @@ body {
     min-width: var(--width);
     max-height: 150px;
     min-height: 150px;
+}
+
+.form__submit {
+    display: block;
+    width: var(--width);
+    font-size: 28px;
+    background-image: var(--gradient1);
+    padding: 15px 20px;
+    border: none;
+    color: #fafafa;
+    font-weight: 700;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.form__submit:hover {
+    background-image: var(--gradient);
+    transition: background-image .3s;
 }
