--- a/style.css
+++ b/style.css
@@ -81,6 +81,20 @@ body {
 }
 
 /* ============ RESPONSIVE DESIGN =============*/
+
+/* Laptop and more */
+@media screen and (max-width: 1024px) {
+    body {
+        background-repeat: no-repeat;
+        padding: 50px 0;
+    }
+
+    .form {
+        width: 80%;
+    }
+
+}
+
 /*Tablet size*/
 @media screen and (max-width: 768px) {
     body {
@@ -91,4 +105,22 @@ body {
     .form {
         margin: 0 auto;
     }
+}
+
+/* cellphone size*/
+@media screen and (max-width: 426px) {
+    .form {
+        width: 90%;
+        padding: 15px 20px;
+    }
+
+    .form__title {
+        margin-bottom: 1.2rem;
+    }
+
+    .form__submit {
+        font-size: 1.5rem;
+        padding: 10px 15px;
+    }
+
 }
